--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Repo-specific artifacts
+.code/
+.idea/
+training_dataset_*.jsonl
+*.~
+
 ### PyCharm+iml template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -477,4 +483,3 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-
