--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .code/
 .idea/
 training_dataset_*.jsonl
-*.~
+RELEASE_NOTES.md
+*~
 
 ### PyCharm+iml template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
